# MLPDeconv

./: .gitignore  01_create_pseudobulks.ipynb  02_train_eval_model.ipynb  03_predict_real_bulk.ipynb  04_hyperparameter_tuning_optuna.ipynb  README.md  common_bulk_genes.json  pyproject.toml  sc_de_genelist.json  sn_de_genelist.json  sn_nonde_genelist.csv  test.ipynb
src/mlpdeconv/: __init__.py  checkpoint.py  cli.py  model.py  predict.py  preprocessing.py  registry.py
src/mlpdeconv/models/: README.md
src/mlpdeconv/models/mouse/: metadata.json
src/mlpdeconv/models/rat/: metadata.json
test/: test_prediction.py
