[project]
name = "mlpdeconv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LuisMartindelCerro", email = "luismdc55@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.11",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
